# colormap

./: .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi.yml
doc/: ChangeLog.txt  requirements.txt
doc/source/: conf.py  index.rst  quickstart.rst  references.rst
notebooks/: README.md  colormap package demonstration.ipynb
src/colormap/: __init__.py  colors.py  get_cmap.py  xfree86.py
test/: __init__.py  test_colors.py  test_get_cmap.py
